--- a/frontend/botc/package.json
+++ b/frontend/botc/package.json
@@ -9,6 +9,8 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@react-router/node": "^7.4.1",
     "@react-router/serve": "^7.4.1",
     "isbot": "^5.1.17",
